--- a/toner.tm2/project.yml
+++ b/toner.tm2/project.yml
@@ -8,16 +8,16 @@ bounds:
   - 180
   - 85.0511
 center: 
-  - -73.92614364624023
-  - 40.72358364851729
-  - 12
+  - -122.33207702636717
+  - 37.658819317731265
+  - 11
 description: Port of Toner to TileMill2, building on Aaron Lidman's Toner-for-TileMill work
 format: "png8:m=h"
 interactivity_layer: ''
 maxzoom: 22
 minzoom: 0
-mtime: 1381623071400
-name: Toner TM2
+mtime: 1391040604878
+name: Toner TM2 old
 scale: 1
 source: "mapbox:///mapbox.mapbox-streets-v3"
 styles: 
